--- a/.github/workflows/proof-html.yml
+++ b/.github/workflows/proof-html.yml
@@ -1,11 +1,30 @@
+# .github/workflows/proof-html.yml
 name: Proof HTML
+
 on:
   push:
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:  # Manual trigger
+
 jobs:
-  build:
+  validate-html:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: anishathalye/proof-html@v1.1.0
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      - name: Validate HTML
+        uses: anishathalye/proof-html@v1.1.0
         with:
           directory: ./
+          fail-on-error: true
+          
+      - name: Upload validation report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-validation-report
+          path: proof-html-report.txt
